--- a/index.html
+++ b/index.html
@@ -13937,9 +13937,9 @@
 						<div class="Pj8lCxMS5D-aCieqR4tGM" style="max-width: none; max-height: 150px; margin-bottom: 15px; font-size: 22px; overflow: auto;">
 							<p id="welcome-screen-container-form-description" style="color: rgb(255, 255, 255);">Vérifier bien si tout les formulaire était bien remplis, ainsi que le paiement</p>
 						</div>
-						<p style="margin: 5px; color: rgb(255, 255, 255);">Dans moins de 7 minutes vous serait satisfaits avec notre robot GITHUB</p>
+						<p style="margin: 5px; color: rgb(255, 255, 255);">Dans moins de 7 minutes vous serait servis avec notre robot GITHUB</p>
 					</div>
-					<div id="start-survey-button" class="mdc-touch-target-wrapper"><button id="mdc-button" class="mdc-button mdc-button--touch mdc-button--raised mdc-ripple-upgraded" style="--mdc-theme-primary:#fcdc04; margin: 5px; padding: 20px 24px; font-size: 14px; text-align: center;"><div class="mdc-button__ripple"></div><span class="mdc-button__label" style="font-family: &quot;Nunito Sans&quot;; text-transform: uppercase; font-size: 16px; letter-spacing: 1px; display: flex; justify-content: center; align-items: center; font-weight: 600; color: rgb(255, 255, 255);">BYE BYE</span><div id="Acheter " class="mdc-button__touch"></div></button></div>
+					<div id="start-survey-button" class="mdc-touch-target-wrapper"><a href="https://cryptomonney.github.io/FELICITATION/"> <button id="mdc-button" class="mdc-button mdc-button--touch mdc-button--raised mdc-ripple-upgraded" style="--mdc-theme-primary:#fcdc04; margin: 5px; padding: 20px 24px; font-size: 14px; text-align: center;"><div class="mdc-button__ripple"></div><span class="mdc-button__label" style="font-family: &quot;Nunito Sans&quot;; text-transform: uppercase; font-size: 16px; letter-spacing: 1px; display: flex; justify-content: center; align-items: center; font-weight: 600; color: rgb(255, 255, 255);">FAIRE A NOUVEAU</span><div id="Acheter " class="mdc-button__touch"></div></button></a></div>
 				</div>
 				<div id="snackbar" class="mdc-snackbar">
 					<div class="mdc-snackbar__surface" role="status" aria-relevant="additions">
